--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@ Error message and password prompt
 
 <li>אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום</li>
 
+<li>אחרי הטווח במסיבת נובה</li>
+
 <li>איזדורה דאנקן</li>
 
 <li>איילה מלאך פיינס</li>
@@ -9385,7 +9387,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230717104232411" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20231120173448597" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9394,7 +9396,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קיבוץ בארי אחרי השבת השחורה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קיבוץ בארי אחרי השבת השחורה]] [[כשמקשיבה לחדשות]] [[אחרי הטווח במסיבת נובה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10503,6 +10505,13 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Achsan min balash - أحسن من بَلَاش - Better then nothing]]&gt;&gt;</pre>
 </div>
+<div created="20231120172950789" modified="20231120173338928" tags="[[כשמקשיבה לחדשות]] עצים" title="אחרי הטווח במסיבת נובה">
+<pre>[img[pictures/afternovafestival.jpg]]
+
+
+
+&lt;&lt;englink [[Nova music festival massacre]]&gt;&gt;</pre>
+</div>
 <div created="20170731120559711" modified="20200219200735654" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
@@ -10893,7 +10902,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231104141626509" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20231120173305835" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15697,8 +15706,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
-<div created="20231019181633015" modified="20231019182625263" tags="[[כאן בגטו]] טלוויזיה" title="כשמקשיבה לחדשות">
+<div created="20231019181633015" modified="20231120174156283" tags="[[כאן בגטו]] טלוויזיה" title="כשמקשיבה לחדשות">
 <pre>[img[pictures/whilelistening.jpg]]
+
+
+!!![[אימא של ג'אזז]]:
+
+מאז השבת השחורה האיומה והנוראה השבעה באוקטובר 2023, שאין שום מילים שיצליחו לתאר או להסביר משהו מכל מה שקרה או קשור בכל הקשר לסיוט המתמשך, קשה מאד להפסיק להקשיב לחדשות.
 
 &lt;&lt;list-links filter:&quot;[tag[כשמקשיבה לחדשות]]&quot;&gt;&gt;
 
@@ -20464,10 +20478,13 @@ Fapina''
 
 &lt;&lt;englink [[Monkeys with car keys]]&gt;&gt;</pre>
 </div>
-<div created="20231104141053387" modified="20231104141708729" tags="[[כשמקשיבה לחדשות]] עצים" title="קיבוץ בארי אחרי השבת השחורה">
+<div created="20231104141053387" modified="20231120174316058" tags="[[כשמקשיבה לחדשות]] עצים" title="קיבוץ בארי אחרי השבת השחורה">
 <pre>
-
 [img[pictures/kibbutzbeeri.jpg]]
+
+
+
+
 
 
 &lt;&lt;englink [[Kibbutz Beeri massacre]]&gt;&gt;</pre>
