--- a/english.html
+++ b/english.html
@@ -929,6 +929,8 @@ Error message and password prompt
 
 <li>Notbook</li>
 
+<li>Nova music festival massacre</li>
+
 <li>Odelia</li>
 
 <li>On the road to somewhere</li>
@@ -9306,7 +9308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Kibbutz Beeri massacre]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Nova music festival massacre]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11718,7 +11720,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231104141538452" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231120173215957" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12998,7 +13000,6 @@ A good friend''
 <div created="20231104141243210" modified="20231104141601440" tags="[[While listening to the news]] Trees Houses" title="Kibbutz Beeri massacre">
 <pre>
 
-
 [img[pictures/kibbutzbeeri.jpg]]
 
 
@@ -14151,6 +14152,14 @@ She's at our place now and she's charming and she told us about [[Lily]].
 
 
  &lt;&lt;heblink [[נוטבוק]]&gt;&gt;</pre>
+</div>
+<div created="20231120153945157" modified="20231120173239778" tags="Trees [[While listening to the news]]" title="Nova music festival massacre">
+<pre>
+
+[img[pictures/afternovafestival.jpg]]
+
+
+ &lt;&lt;heblink [[אחרי הטווח במסיבת נובה]]&gt;&gt;</pre>
 </div>
 <div created="20200217133031335" modified="20200718112318095" tags="HH" title="Odelia">
 <pre>[img[pictures/odelia.jpg]]
