--- a/english.html
+++ b/english.html
@@ -14153,13 +14153,13 @@ She's at our place now and she's charming and she told us about [[Lily]].
 
  &lt;&lt;heblink [[נוטבוק]]&gt;&gt;</pre>
 </div>
-<div created="20231120153945157" modified="20231120173239778" tags="Trees [[While listening to the news]]" title="Nova music festival massacre">
+<div created="20231120153945157" modified="20231120175233632" tags="Trees [[While listening to the news]]" title="Nova music festival massacre">
 <pre>
 
 [img[pictures/afternovafestival.jpg]]
 
 
- &lt;&lt;heblink [[אחרי הטווח במסיבת נובה]]&gt;&gt;</pre>
+ &lt;&lt;heblink [[אחרי הטבח במסיבת נובה]]&gt;&gt;</pre>
 </div>
 <div created="20200217133031335" modified="20200718112318095" tags="HH" title="Odelia">
 <pre>[img[pictures/odelia.jpg]]
