--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Error message and password prompt
 
 <li>אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום</li>
 
-<li>אחרי הטווח במסיבת נובה</li>
+<li>אחרי הטבח במסיבת נובה</li>
 
 <li>איזדורה דאנקן</li>
 
@@ -9396,7 +9396,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קיבוץ בארי אחרי השבת השחורה]] [[כשמקשיבה לחדשות]] [[אחרי הטווח במסיבת נובה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קיבוץ בארי אחרי השבת השחורה]] [[כשמקשיבה לחדשות]] [[אחרי הטבח במסיבת נובה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10505,7 +10505,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Achsan min balash - أحسن من بَلَاش - Better then nothing]]&gt;&gt;</pre>
 </div>
-<div created="20231120172950789" modified="20231120173338928" tags="[[כשמקשיבה לחדשות]] עצים" title="אחרי הטווח במסיבת נובה">
+<div created="20231120172950789" modified="20231120175205529" tags="[[כשמקשיבה לחדשות]] עצים" title="אחרי הטבח במסיבת נובה">
 <pre>[img[pictures/afternovafestival.jpg]]
 
 
