--- a/english.html
+++ b/english.html
@@ -365,6 +365,8 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>Black Sabath October 7th</li>
+
 <li>Blended soup</li>
 
 <li>blue-marble-hood</li>
@@ -9308,7 +9310,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Nova music festival massacre]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Black Sabath October 7th]] [[Nova music festival massacre]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10259,6 +10261,14 @@ Is where I want to be
 
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
+</div>
+<div created="20231123081828161" modified="20231123083033315" tags="Trees [[While listening to the news]] [[True stories]]" title="Black Sabath October 7th">
+<pre>
+
+[img[pictures/blacksabath.jpg]]
+
+ &lt;&lt;heblink [[שבת שחורה שבעה באוקטובר]]&gt;&gt;
+</pre>
 </div>
 <div created="20200306151232240" modified="20200315180205237" tags="[[Vegan recipes]] Recipes [[Food addicts]] [[Iry claims]]" title="Blended soup">
 <pre>[img[pictures/marak-tachoon.jpg]]
@@ -11720,7 +11730,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231120173215957" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231123082016499" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
