--- a/index.html
+++ b/index.html
@@ -1467,6 +1467,8 @@ Error message and password prompt
 
 <li>שאלון האחיות</li>
 
+<li>שבת שחורה שבעה באוקטובר</li>
+
 <li>שָה נוּאָר</li>
 
 <li>שה פניס</li>
@@ -9396,7 +9398,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשמקשיבה לחדשות]] [[אחרי הטבח בפסטיבל נובה ליד רעים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שבת שחורה שבעה באוקטובר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10505,8 +10507,10 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Achsan min balash - أحسن من بَلَاش - Better then nothing]]&gt;&gt;</pre>
 </div>
-<div created="20231120172950789" modified="20231120200526674" tags="[[כשמקשיבה לחדשות]] עצים" title="אחרי הטבח בפסטיבל נובה ליד רעים">
+<div created="20231120172950789" modified="20231120200817359" tags="[[כשמקשיבה לחדשות]] עצים" title="אחרי הטבח בפסטיבל נובה ליד רעים">
 <pre>[img[pictures/afternovafestival.jpg]]
+
+
 
 
 
@@ -10902,7 +10906,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231120173305835" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20231123082108098" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -20478,7 +20482,7 @@ Fapina''
 
 &lt;&lt;englink [[Monkeys with car keys]]&gt;&gt;</pre>
 </div>
-<div created="20231104141053387" modified="20231120174316058" tags="[[כשמקשיבה לחדשות]] עצים" title="קיבוץ בארי אחרי השבת השחורה">
+<div created="20231104141053387" modified="20231123081700692" tags="[[כשמקשיבה לחדשות]] עצים" title="קיבוץ בארי אחרי השבת השחורה">
 <pre>[img[pictures/kibbutzbeeri.jpg]]
 
 
@@ -21113,6 +21117,11 @@ Fapina''
 [[שלח]]
 
 &lt;&lt;englink [[The sisters' questionnaire]]&gt;&gt;</pre>
+</div>
+<div created="20231123081507720" modified="20231123083009934" tags="עצים [[כשמקשיבה לחדשות]] [[סיפורים אמיתיים]]" title="שבת שחורה שבעה באוקטובר">
+<pre>[img[pictures/blacksabath.jpg]]
+
+&lt;&lt;englink [[Black Sabath October 7th]]&gt;&gt;</pre>
 </div>
 <div created="20161026213244448" modified="20200628134801473" tags="HH" title="שָה נוּאָר">
 <pre>[img[pictures/chatnoir.jpg]]
