--- a/english.html
+++ b/english.html
@@ -547,6 +547,8 @@ Error message and password prompt
 
 <li>Fa</li>
 
+<li>Fall December 2023</li>
+
 <li>Families</li>
 
 <li>Fapina</li>
@@ -9310,7 +9312,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Black Sabath October 7th]] [[Nova music festival massacre]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Fall December 2023]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9330,7 +9332,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231101170241301" title="$:/temp/search">
+<div created="20161023184814872" modified="20231130220535433" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10264,7 +10266,6 @@ Is where I want to be
 </div>
 <div created="20231123081828161" modified="20231123083033315" tags="Trees [[While listening to the news]] [[True stories]]" title="Black Sabath October 7th">
 <pre>
-
 [img[pictures/blacksabath.jpg]]
 
  &lt;&lt;heblink [[שבת שחורה שבעה באוקטובר]]&gt;&gt;
@@ -11668,6 +11669,14 @@ There aren't enough words or space to describe the wonder of him and of the whol
  &lt;&lt;heblink [[פה]]&gt;&gt;
 </pre>
 </div>
+<div created="20231203192337252" modified="20231203192659303" tags="[[Here in the Ghetto]] [[While listening to the news]] Houses Windows Laundry" title="Fall December 2023">
+<pre>
+[img[pictures/fall.jpg]]
+
+
+
+ &lt;&lt;heblink [[שלכת דצמבר 2023]]&gt;&gt;</pre>
+</div>
 <div created="20200426132558252" modified="20200505100354366" tags="Children Mothers Meals Houses [[The team]]" title="Families">
 <pre>[img[pictures/families.jpg]]
 
@@ -11730,7 +11739,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231123082016499" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231203192527231" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13009,7 +13018,6 @@ A good friend''
 </div>
 <div created="20231104141243210" modified="20231104141601440" tags="[[While listening to the news]] Trees Houses" title="Kibbutz Beeri massacre">
 <pre>
-
 [img[pictures/kibbutzbeeri.jpg]]
 
 
@@ -14165,7 +14173,6 @@ She's at our place now and she's charming and she told us about [[Lily]].
 </div>
 <div created="20231120153945157" modified="20231120200700828" tags="Trees [[While listening to the news]]" title="Nova music festival massacre">
 <pre>
-
 [img[pictures/afternovafestival.jpg]]
 
 
