--- a/index.html
+++ b/index.html
@@ -1497,6 +1497,8 @@ Error message and password prompt
 
 <li>שלח</li>
 
+<li>שלכת דצמבר 2023</li>
+
 <li>שמרים קרנץ</li>
 
 <li>שניצל</li>
@@ -9398,7 +9400,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אווה כהן]] אווה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שלכת דצמבר 2023]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10906,7 +10908,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231123082108098" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20231203192728243" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -21419,6 +21421,14 @@ Fapina''
 
 
 &lt;&lt;englink [[Send]]&gt;&gt;</pre>
+</div>
+<div created="20231203192143361" modified="20231203192754162" tags="חלונות [[כאן בגטו]] בתים [[כשמקשיבה לחדשות]] כביסה" title="שלכת דצמבר 2023">
+<pre>
+[img[pictures/fall.jpg]]
+
+
+
+&lt;&lt;englink [[Fall December 2023]]&gt;&gt;</pre>
 </div>
 <div created="20170707184028118" modified="20200813154129883" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="שמרים קרנץ">
 <pre>[img[pictures/shmarim-krantz.jpg]]
