when steam mists

--- a/english.html
+++ b/english.html
@@ -1351,6 +1351,8 @@ Error message and password prompt
 
 <li>When people were still optimistic</li>
 
+<li>When steam mists up</li>
+
 <li>When the cars were pretty</li>
 
 <li>When there were fewer cars</li>
@@ -9312,7 +9314,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Fall December 2023]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[When steam mists up]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10265,8 +10267,7 @@ Is where I want to be
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
 <div created="20231123081828161" modified="20231123083033315" tags="Trees [[While listening to the news]] [[True stories]]" title="Black Sabath October 7th">
-<pre>
-[img[pictures/blacksabath.jpg]]
+<pre>[img[pictures/blacksabath.jpg]]
 
  &lt;&lt;heblink [[שבת שחורה שבעה באוקטובר]]&gt;&gt;
 </pre>
@@ -11670,8 +11671,7 @@ There aren't enough words or space to describe the wonder of him and of the whol
 </pre>
 </div>
 <div created="20231203192337252" modified="20231203192659303" tags="[[Here in the Ghetto]] [[While listening to the news]] Houses Windows Laundry" title="Fall December 2023">
-<pre>
-[img[pictures/fall.jpg]]
+<pre>[img[pictures/fall.jpg]]
 
 
 
@@ -11739,7 +11739,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231203192527231" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20231204163838447" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13017,8 +13017,7 @@ A good friend''
 </pre>
 </div>
 <div created="20231104141243210" modified="20231104141601440" tags="[[While listening to the news]] Trees Houses" title="Kibbutz Beeri massacre">
-<pre>
-[img[pictures/kibbutzbeeri.jpg]]
+<pre>[img[pictures/kibbutzbeeri.jpg]]
 
 
 
@@ -14172,8 +14171,7 @@ She's at our place now and she's charming and she told us about [[Lily]].
  &lt;&lt;heblink [[נוטבוק]]&gt;&gt;</pre>
 </div>
 <div created="20231120153945157" modified="20231120200700828" tags="Trees [[While listening to the news]]" title="Nova music festival massacre">
-<pre>
-[img[pictures/afternovafestival.jpg]]
+<pre>[img[pictures/afternovafestival.jpg]]
 
 
  &lt;&lt;heblink [[אחרי הטבח בפסטיבל נובה ליד רעים]]&gt;&gt;</pre>
@@ -17244,6 +17242,16 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 
 
 </pre>
+</div>
+<div created="20231204163229906" modified="20231204164734487" tags="[[To everything there is a place]] Kitchens [[Food addicts]]" title="When steam mists up">
+<pre>
+[img[pictures/whensteammists.jpg]]
+
+
+When steam mists up the lid of the storing box.
+
+
+ &lt;&lt;heblink [[כשיש אדים על המכסה של הקופסה.]]&gt;&gt;</pre>
 </div>
 <div created="20200215170654803" modified="20200215170848174" tags="Once" title="When the cars were pretty">
 <pre>''
