--- a/index.html
+++ b/index.html
@@ -945,6 +945,8 @@ Error message and password prompt
 
 <li>כשהמכוניות היו יפות</li>
 
+<li>כשיש אדים על המכסה של הקופסה.</li>
+
 <li>כשמקשיבה לחדשות</li>
 
 <li>כשנשאר בצק פריך</li>
@@ -9400,7 +9402,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שלכת דצמבר 2023]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשיש אדים על המכסה של הקופסה.]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9420,7 +9422,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231130220140107" title="$:/temp/search">
+<div created="20161023184814872" modified="20231204163033178" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10908,7 +10910,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231203192728243" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20231204163642186" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15712,6 +15714,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
+<div created="20231204163037405" modified="20231204165821371" tags="מטבחים [[חיות אוכל]] [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="כשיש אדים על המכסה של הקופסה.">
+<pre>
+[img[pictures/whensteammists.jpg]]
+
+!!![[אימא של ג'אזז]:
+
+כשיש אדים על המכסה של הקופסה, יש לנגב אותם לפני הסגירה, ועוד לפני זה, לא לסגור כשחם! ועדיין, יכולים להיווצר, ואף נוצרים, אדים במהלך שהיית כלי סגור במקרר עם אוכל שאיננו רוצים שיתלחלח, ומכאן החוק.
+
+
+&lt;&lt;englink [[When steam mists up]]&gt;&gt;</pre>
+</div>
 <div created="20231019181633015" modified="20231120174156283" tags="[[כאן בגטו]] טלוויזיה" title="כשמקשיבה לחדשות">
 <pre>[img[pictures/whilelistening.jpg]]
 
@@ -17834,13 +17847,13 @@ We rise to play a greater part.
 &lt;&lt;englink [[Neta]]&gt;&gt;
 </pre>
 </div>
-<div created="20211011093313989" modified="20211011095643716" tags="סרטים [[מטא בדיון]] בתים סדרות" title="ננו פיצ'ר">
+<div created="20211011093313989" modified="20231204153632034" tags="סרטים [[מטא בדיון]] בתים סדרות" title="ננו פיצ'ר">
 <pre>[img[pictures/nanofeature.jpg]]
 
 
 !!![[יויו]]:
 
-בשעה טובה [[לתומר|תומר]] ולי על פתיחת ננו פיצ'ר.
+בשעה טובה [[לתומר|תומר]] ולי על פתיחת ננו פיצ'ר. סרטים באורך מתאים.
 
 
 &lt;&lt;englink [[Nano feature]]&gt;&gt;</pre>
@@ -21423,8 +21436,7 @@ Fapina''
 &lt;&lt;englink [[Send]]&gt;&gt;</pre>
 </div>
 <div created="20231203192143361" modified="20231203192754162" tags="חלונות [[כאן בגטו]] בתים [[כשמקשיבה לחדשות]] כביסה" title="שלכת דצמבר 2023">
-<pre>
-[img[pictures/fall.jpg]]
+<pre>[img[pictures/fall.jpg]]
 
 
 
