--- a/index.html
+++ b/index.html
@@ -9393,7 +9393,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20231120173448597" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20231205065636699" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -15714,11 +15714,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
-<div created="20231204163037405" modified="20231204165821371" tags="מטבחים [[חיות אוכל]] [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="כשיש אדים על המכסה של הקופסה.">
-<pre>
-[img[pictures/whensteammists.jpg]]
+<div created="20231204163037405" modified="20231205065639772" tags="מטבחים [[חיות אוכל]] [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="כשיש אדים על המכסה של הקופסה.">
+<pre>[img[pictures/whensteammists.jpg]]
 
-!!![[אימא של ג'אזז]:
+!!![[אימא של ג'אזז]]:
 
 כשיש אדים על המכסה של הקופסה, יש לנגב אותם לפני הסגירה, ועוד לפני זה, לא לסגור כשחם! ועדיין, יכולים להיווצר, ואף נוצרים, אדים במהלך שהיית כלי סגור במקרר עם אוכל שאיננו רוצים שיתלחלח, ומכאן החוק.
 
