--- a/english.html
+++ b/english.html
@@ -9314,7 +9314,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[When steam mists up]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The blue is already here]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9334,7 +9334,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231130220535433" title="$:/temp/search">
+<div created="20161023184814872" modified="20231210185527336" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15872,7 +15872,7 @@ This is a part of the living room in the village where we marvelously [[grew up|
  &lt;&lt;heblink [[ביג לבובסקי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212155206056" modified="20200725180822454" tags="[[True stories]] [[On the road to somewhere]] [[The global village]] [[Stories from the future]] Closers" title="The blue is already here">
+<div created="20200212155206056" modified="20231208145838981" tags="[[True stories]] [[On the road to somewhere]] [[The global village]] [[Stories from the future]] Closers" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[Yoyo]]:
@@ -17244,8 +17244,7 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 </pre>
 </div>
 <div created="20231204163229906" modified="20231204164734487" tags="[[To everything there is a place]] Kitchens [[Food addicts]]" title="When steam mists up">
-<pre>
-[img[pictures/whensteammists.jpg]]
+<pre>[img[pictures/whensteammists.jpg]]
 
 
 When steam mists up the lid of the storing box.
