stuufed vegt and unfinished

--- a/english.html
+++ b/english.html
@@ -1143,6 +1143,8 @@ Error message and password prompt
 
 <li>Stories I`ve told Norma</li>
 
+<li>Stuffed Peppers and chard leaves</li>
+
 <li>Sultana</li>
 
 <li>Sultana and Yasmin</li>
@@ -1312,6 +1314,8 @@ Error message and password prompt
 <li>Umbrella car</li>
 
 <li>UMF</li>
+
+<li>Unfinished</li>
 
 <li>Untidy is the new well-groomed</li>
 
@@ -9314,7 +9318,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[TV Series]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Dandan is back]] Unfinished [[Stuffed Peppers and chard leaves]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9334,7 +9338,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231219181118058" title="$:/temp/search">
+<div created="20161023184814872" modified="20240103192549570" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11192,7 +11196,7 @@ On June, [[Dandan]] went.
 
 </pre>
 </div>
-<div created="20230513210658732" modified="20230513210912061" tags="[[Dandan went]] Houses Families" title="Dandan is back">
+<div created="20230513210658732" modified="20240103192547080" tags="[[Dandan went]] Houses Families Unfinished" title="Dandan is back">
 <pre>[img[pictures/dandanisback.jpg]]
 
 
@@ -11739,7 +11743,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20231204163838447" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20240103184049996" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12423,7 +12427,7 @@ It's the end of Sukkot 2018, at the afternoon hours, Sheffi drove with Nano our 
 
 </pre>
 </div>
-<div created="20200627215526134" modified="20200627221454129" tags="HH [[True stories]] [[The global village]]" title="Holocaust">
+<div created="20200627215526134" modified="20240103192529667" tags="HH [[True stories]] [[The global village]] Unfinished" title="Holocaust">
 <pre>[img[pictures/shoa.jpg]]
 
 
@@ -15627,6 +15631,17 @@ What I would like to say in this true story is, the whole point is [[to drink so
 
 </pre>
 </div>
+<div created="20240103180500992" modified="20240103184743043" tags="Houses Kitchens [[Food addicts]] [[Cooks are dancers]] [[Iry and Gura]] Recipes [[Vegan recipes]] Unfinished Ufinished" title="Stuffed Peppers and chard leaves">
+<pre>[img[pictures/stuffedchard.jpg]]
+
+Stuffed Peppers and chard
+And The Marvelous Sauce
+
+
+
+ &lt;&lt;heblink [[עלי מנגולד ופלפל שושקה ממולאים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219163855213" modified="20230520115949500" tags="Mothers [[The kitchen by Genevieve]] Restaurants [[Cooks are dancers]]" title="Sultana">
 <pre>[img[pictures/sultana.jpg]]
 
@@ -17007,6 +17022,15 @@ It wasn't a problem in the summer, and I also had a bike, but in the winter I ha
 
  &lt;&lt;heblink [[UMF]]&gt;&gt;
 </pre>
+</div>
+<div created="20240103182249218" modified="20240103192511619" tags="Closers Families Houses [[On the road to somewhere]]" title="Unfinished">
+<pre>[img[pictures/unfinished.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Unfinished]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[לא מסוימים]]&gt;&gt;</pre>
 </div>
 <div created="20200420173740515" modified="20200422202909541" tags="[[Menopause sisters]] [[True stories]] [[Corona beings]]" title="Untidy is the new well-groomed">
 <pre>[img[pictures/muznach.jpg]]
