--- a/index.html
+++ b/index.html
@@ -957,6 +957,8 @@ Error message and password prompt
 
 <li>לא חברמניות</li>
 
+<li>לא מסוימים</li>
+
 <li>לאונרד כהן</li>
 
 <li>להרוג את איב</li>
@@ -1320,6 +1322,8 @@ Error message and password prompt
 <li>על הספקטרום</li>
 
 <li>עלי גפן</li>
+
+<li>עלי מנגולד ופלפל שושקה ממולאים</li>
 
 <li>עם הפנים החוצה</li>
 
@@ -9393,7 +9397,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20231205065636699" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20240103192657751" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9402,7 +9406,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סדרות [[גואן יין]] [[גואן אופנה]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]] אלפרד [[יויו וגורה]] [[כוכב המשאלות 04]] הקליניקה [[הסיפור על גורה]] שואה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עלי מנגולד ופלפל שושקה ממולאים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9422,7 +9426,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20231219180951814" title="$:/temp/search">
+<div created="20161023184814872" modified="20240103192408017" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10910,7 +10914,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20231204163642186" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20240103182708204" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12599,7 +12603,7 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[Dandan]]&gt;&gt;
 </pre>
 </div>
-<div created="20230513210112181" modified="20230815184033517" tags="[[דןדן נסע]] בתים משפחות" title="דןדן חזר">
+<div created="20230513210112181" modified="20240103192435691" tags="[[דןדן נסע]] בתים משפחות [[לא מסוימים]]" title="דןדן חזר">
 <pre>[img[pictures/dandanisback.jpg]]
 
 !!![[גורה]]:
@@ -15806,6 +15810,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;englink [[Non-hunky-dory]]&gt;&gt;</pre>
+</div>
+<div created="20240103182234887" modified="20240103192315766" tags="סגירים בתים [[בדרך לאן שהוא]] משפחות" title="לא מסוימים">
+<pre>[img[pictures/unfinished.jpg]]
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[לא מסוימים]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[Unfinished]]&gt;&gt;</pre>
 </div>
 <div created="20200404103552755" modified="20200404120621895" tags="מוזיקה [[אחיות חוץ]] [[הלכות קורונה]]" title="לאונרד כהן">
 <pre>[img[pictures/leonard-cohen.jpg]]
@@ -19188,7 +19203,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[On the spectrum]]&gt;&gt;
 </pre>
 </div>
-<div created="20200417165302560" modified="20200422183020283" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
+<div created="20200417165302560" modified="20231223124525535" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
 <pre>[img[pictures/aley-gefen.jpg]]
 
 !!![[תומר]]:
@@ -19221,12 +19236,83 @@ __אופן ההכנה:__
 *ממלאים בכד מדידה ליטר מים רותחים, מוסיפים פנימה כף ממרח רימונים, מיץ מחצי לימון וכפית מלח ים גס ומערבבים עד שהנוזל אחיד
 *מוזגים בעדינות ומגובה נמוך את המים עד כיסוי עלי הגפן. מניחים על העלים צלחת הפוכה שמא יצופו, ומבשלים על אש נמוכה שלוש שעות
 *בזמן הבישול בודקים מידי פעם מה נשמע בסיר והאם יש מספיק מים. אם אין מספיק מוסיפים מעט כל פעם
-*לאחר כיבוי הלהבה, נותנים לסיר להתקרר קצת, מסירים את הצלחת ומזליפים שמן זית ועוד כמה גרגרי מלח ים ס על הכל, וזה מוכן
+*לאחר כיבוי הלהבה, נותנים לסיר להתקרר קצת, מסירים את הצלחת ומזליפים שמן זית ועוד כמה גרגרי מלח ים גס על הכל, וזה מוכן
 
 
 
 
 &lt;&lt;englink [[Grape leaves]]&gt;&gt;
+</pre>
+</div>
+<div created="20240103174956683" modified="20240103193155658" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]]" title="עלי מנגולד ופלפל שושקה ממולאים">
+<pre>[img[pictures/stuffedchard.jpg]]
+
+[[אירי וגורה]]:
+
+''
+עלי מנגולד ופלפל שושקה ממולאים''
+
+כמות שמתאימה לסוטאז' בגודל 26:
+
+__החומרים:__
+
+1.	__בסיס:__
+5 עגבניות פרוסות 
+3 בצלים פרוסים (סגול, לבן, שלוט, מעורבב)
+2-3 שיני שום קלופות ופרוסות
+
+2.	__מילוי:__
+2 כוסות אורז מכל סוג/כוסמת/קינואה שנשטפו, הושרו וסוננו כל אחד לחוד ולפי זמן ההשריה המתאים בקערה מעורבבים עם 2 עגבניות סחוטות.
+
+3.	__הירקות אותם אנו ממלאים:__
+פלפלים מנוקים ושטופים, עלי מנגולד חלוטים, מיושרים, הפוכים ובטמפרטורת החדר (זו הבחירה האישית שלי אבל ברור שאפשר איזה ירק מתאים שבוחרים).
+
+4.	__ירקות נוספים:__
+בטטות וגזרים
+
+5.	__רוטב:__
+פחית קטנה של רסק עגבניות מוטי
+
+כף רכז רימונים (האירני מאד טוב)
+
+מיץ מחצי לימון (רבע כוס)
+
+רבע כוס שמן זית
+
+כף עדינה של מלח ים
+
+ליטר-ליטר וחצי מים רותחים
+(אני עושה את זה בכד מידה)
+
+כל אלה מעורבבים לנוזל חלק.
+
+6.	__מעל הכול:__
+6-8 גבעולי טימין
+
+__חיבור:__
+
+1.	לסדר בתחתית הסיר שכבת עגבניות צמודות.
+
+2.	מעליה שכבה צפופה יחסית של עיגולי בצל ואת פרוסות השום. 
+
+3.	ממלאים את הירקות: את העלים כמו מלפוף, כלומר מניחים כפית שתיים בשליש התחתוך ומגלגלים צמוד, או כמו עלי גפן עם סגירה בצדדים, ממלאים פלפלים עד חצי ומניחים (הכנתי חצאי פלפלי שושקה שכובים וצמודים זה לזה. בקצוות סגרתי אותם עם החלקים הפחות מתאימים למילוי של עלי המנגולד, ולא נורא אם חלק מהמלית גולשת לתוך הרוטב).
+
+4.	מניחים בצורה יפה וצמודה את הירקות הממולאים מעל שכבת הבצל.
+
+5.	בעזרת מצקת מוזגים בעדינות ומגובה נמוך מהרוטב החלק מעל הירקות הממולאים עד שהם מכוסים בנוזל פלוס מילימטר שניים.
+
+6.	מסדרים מעל הכול את ענפי התימין (אפשר עוד כמה אם אוהבים)
+
+7.	מניחים צלחת חלקה מעל הכול (למניעת התרוממות הירקות בזמן הבישול).
+
+8.	מניחים על להבה בינונית ומתחילים לבשל עד לכמעט רתיחה.
+
+9.	מנמיכים להבה, וממשיכים לבשל לפחות שעתיים. 
+
+
+
+
+&lt;&lt;englink [[Stuffed Peppers and chard leaves]]&gt;&gt;
 </pre>
 </div>
 <div created="20170628145012336" modified="20200513151020397" tags="[[אירי טוענת]] [[הכפר הגלובלי]] סגירים [[האנקי דורי]] [[סיפורים מהעתיד]]" title="עם הפנים החוצה">
@@ -21181,7 +21267,7 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20230508182129450" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
+<div created="20161219172718131" modified="20240103192447747" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]] [[לא מסוימים]]" title="שואה">
 <pre>[img[pictures/shoa.jpg]]
 
 
