--- a/english.html
+++ b/english.html
@@ -477,6 +477,8 @@ Error message and password prompt
 
 <li>Cucumber salad with red onion and dill</li>
 
+<li>Cure</li>
+
 <li>Cyclamen</li>
 
 <li>Dabke</li>
@@ -9318,7 +9320,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Dandan is back]] Unfinished [[Stuffed Peppers and chard leaves]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Cure [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11140,6 +11142,13 @@ Once upon a time there was a moment that I noticed that once I'm happy with a th
  &lt;&lt;heblink [[סלט מלפפונים עם בצל סגול ושמיר]]&gt;&gt;
 </pre>
 </div>
+<div created="20240123065128945" modified="20240123065257195" tags="[[While listening to the news]] TV Houses" title="Cure">
+<pre>
+[img[pictures/cure.jpg]]
+
+
+ &lt;&lt;heblink [[מרפא]]&gt;&gt;</pre>
+</div>
 <div created="20200308103954851" modified="20200308104147181" tags="[[Here in the Ghetto]] [[True stories]]" title="Cyclamen">
 <pre>[img[pictures/rakafot.jpg]]
 
@@ -11743,7 +11752,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20240103184049996" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20240123065232011" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -15631,7 +15640,7 @@ What I would like to say in this true story is, the whole point is [[to drink so
 
 </pre>
 </div>
-<div created="20240103180500992" modified="20240103184743043" tags="Houses Kitchens [[Food addicts]] [[Cooks are dancers]] [[Iry and Gura]] Recipes [[Vegan recipes]] Unfinished Ufinished" title="Stuffed Peppers and chard leaves">
+<div created="20240103180500992" modified="20240123065327418" tags="Houses Kitchens [[Food addicts]] [[Cooks are dancers]] [[Iry and Gura]] Recipes [[Vegan recipes]] Unfinished Ufinished [[While listening to the news]]" title="Stuffed Peppers and chard leaves">
 <pre>[img[pictures/stuffedchard.jpg]]
 
 Stuffed Peppers and chard
@@ -17023,7 +17032,7 @@ It wasn't a problem in the summer, and I also had a bike, but in the winter I ha
  &lt;&lt;heblink [[UMF]]&gt;&gt;
 </pre>
 </div>
-<div created="20240103182249218" modified="20240103192511619" tags="Closers Families Houses [[On the road to somewhere]]" title="Unfinished">
+<div created="20240103182249218" modified="20240104165739545" tags="Closers Families Houses [[On the road to somewhere]] [[While listening to the news]]" title="Unfinished">
 <pre>[img[pictures/unfinished.jpg]]
 
 
