--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,8 @@ Error message and password prompt
 
 <li>מרכז בעלי מלאכה 6</li>
 
+<li>מרפא</li>
+
 <li>מרק</li>
 
 <li>מרק טחון</li>
@@ -9406,7 +9408,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עלי מנגולד ופלפל שושקה ממולאים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10914,7 +10916,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20240103182708204" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
+<div created="20171216194951924" modified="20240123065402811" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]] בתים" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12603,7 +12605,7 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[Dandan]]&gt;&gt;
 </pre>
 </div>
-<div created="20230513210112181" modified="20240103192435691" tags="[[דןדן נסע]] בתים משפחות [[לא מסוימים]]" title="דןדן חזר">
+<div created="20230513210112181" modified="20240103193447825" tags="[[דןדן נסע]] בתים משפחות [[לא מסוימים]]" title="דןדן חזר">
 <pre>[img[pictures/dandanisback.jpg]]
 
 !!![[גורה]]:
@@ -15811,10 +15813,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Non-hunky-dory]]&gt;&gt;</pre>
 </div>
-<div created="20240103182234887" modified="20240103192315766" tags="סגירים בתים [[בדרך לאן שהוא]] משפחות" title="לא מסוימים">
+<div created="20240103182234887" modified="20240104165635337" tags="סגירים בתים [[בדרך לאן שהוא]] משפחות [[כשמקשיבה לחדשות]]" title="לא מסוימים">
 <pre>[img[pictures/unfinished.jpg]]
 
+!!![[גורה]]:
 
+בזמן האחרון יש ציורים שאני לא יודעת איך או אם להמשיך.
+(ינואר 2024 מלא בתפילות להרבה ניסים כמו מה שקרה השבוע במערכת המשפט במדינת ישראל).
 
 &lt;&lt;list-links filter:&quot;[tag[לא מסוימים]]&quot;&gt;&gt;
 
@@ -17453,6 +17458,13 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Merkaz Ba'alei Melaha 6]]&gt;&gt;</pre>
+</div>
+<div created="20240123064910390" modified="20240123065425661" tags="[[כשמקשיבה לחדשות]] טלוויזיה" title="מרפא">
+<pre>[img[pictures/cure.jpg]]
+
+
+
+&lt;&lt;englink [[Cure]]&gt;&gt;</pre>
 </div>
 <div created="20170331201741562" modified="20200219173306289" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
@@ -19244,10 +19256,10 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Grape leaves]]&gt;&gt;
 </pre>
 </div>
-<div created="20240103174956683" modified="20240103193155658" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]]" title="עלי מנגולד ופלפל שושקה ממולאים">
+<div created="20240103174956683" modified="20240104165654675" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]] [[כשמקשיבה לחדשות]]" title="עלי מנגולד ופלפל שושקה ממולאים">
 <pre>[img[pictures/stuffedchard.jpg]]
 
-[[אירי וגורה]]:
+!!![[אירי וגורה]]:
 
 ''
 עלי מנגולד ופלפל שושקה ממולאים''
