--- a/english.html
+++ b/english.html
@@ -11142,9 +11142,8 @@ Once upon a time there was a moment that I noticed that once I'm happy with a th
  &lt;&lt;heblink [[סלט מלפפונים עם בצל סגול ושמיר]]&gt;&gt;
 </pre>
 </div>
-<div created="20240123065128945" modified="20240123065257195" tags="[[While listening to the news]] TV Houses" title="Cure">
-<pre>
-[img[pictures/cure.jpg]]
+<div created="20240123065128945" modified="20240123070728838" tags="[[While listening to the news]] TV Houses" title="Cure">
+<pre>[img[pictures/cure.jpg]]
 
 
  &lt;&lt;heblink [[מרפא]]&gt;&gt;</pre>
