--- a/index.html
+++ b/index.html
@@ -9408,7 +9408,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="תומר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9428,7 +9428,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20240103192408017" title="$:/temp/search">
+<div created="20161023184814872" modified="20240222160921619" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12745,7 +12745,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20221227182202343" tags="[[קופים ממונעים]]" title="האחיות כהן">
+<div created="20161111215423587" modified="20240123154726457" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -17459,8 +17459,14 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Merkaz Ba'alei Melaha 6]]&gt;&gt;</pre>
 </div>
-<div created="20240123064910390" modified="20240123065425661" tags="[[כשמקשיבה לחדשות]] טלוויזיה" title="מרפא">
+<div created="20240123064910390" modified="20240130171523860" tags="[[כשמקשיבה לחדשות]] טלוויזיה בתים" title="מרפא">
 <pre>[img[pictures/cure.jpg]]
+
+!!![[תומר]]:
+
+היום היום ה-109 לאסון שבעה באוקטובר 2023. כפות רגלינו כבר בתוך 2024. השבויים המסכנים שלנו עדיין שם בעזה או בחאן יונס או האל יודע היכן, משפחותיהם כאן, חיילים נהרגים, ממשלה רעה רעה. מוקפים באויבנו כפי שתמיד נאמר לנו, והם נותנים בראש. המצב קטסטרופלי בכל מישור.
+
+כולנו מחכים לכם חטופים יקרים ואהובים שלנו, ועד שלא תשובו כולכם איננו שלמים.
 
 
 
@@ -21817,7 +21823,7 @@ Fapina''
 
 &lt;&lt;englink [[Flip-flopping]]&gt;&gt;</pre>
 </div>
-<div created="20170401223255295" modified="20200215180004031" tags="[[אחות כהן]] חבר" title="תומר">
+<div created="20170401223255295" modified="20240222160917084" tags="[[אחות כהן]] חבר [[כאן בגטו]]" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
