--- a/index.html
+++ b/index.html
@@ -9396,10 +9396,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20240302114244462" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20240103192657751" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20240302114250844" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9408,7 +9408,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="תומר [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עלי מנגולד ופלפל שושקה ממולאים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9428,7 +9428,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20240222160921619" title="$:/temp/search">
+<div created="20161023184814872" modified="20240302114209512" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -19262,10 +19262,14 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Grape leaves]]&gt;&gt;
 </pre>
 </div>
-<div created="20240103174956683" modified="20240104165654675" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]] [[כשמקשיבה לחדשות]]" title="עלי מנגולד ופלפל שושקה ממולאים">
+<div created="20240103174956683" modified="20240302115151291" tags="מתכונים מטבחים [[חיות אוכל]] [[לא מסוימים]] [[אירי וגורה]] בתים [[טבחים הם רקדנים]] [[מתכונים טבעוניים]] [[כשמקשיבה לחדשות]]" title="עלי מנגולד ופלפל שושקה ממולאים">
 <pre>[img[pictures/stuffedchard.jpg]]
 
 !!![[אירי וגורה]]:
+
+את האיור הזה גורה עשתה עכשיו, בימי המלחמה,
+זה התחיל [[כשאבא יואל|אבא יואל]] הציע לגורה הבוכיה לצייר משהו על קיר המטבח. גורה, לאחר חיטוט במרשתת נדלקה על [[הרוטב הנפלא|https://en.m.wikipedia.org/wiki/File:Jehan_Georges_Vibert_-_The_Marvelous_Sauce,_ca._1890,_Albright-Knox_Art_Gallery.jpg]], ציור שלא הכירה, וציירה אותו בדרכה. את האיור גורה עשתה מתמונה שיואל צילם. שתינו מכינות ממולאים ממש באותו המטבח.
+
 
 ''
 עלי מנגולד ופלפל שושקה ממולאים''
